[package]
name = "deno_bindgen"
version = "0.2.0"
description = "This tool aims to simplify glue code generation for Deno FFI libraries written in Rust."
license = "MIT"
edition = "2018"

[dependencies]
deno_bindgen_macro = { path = "./macro/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

