[package]
name = "deno_bindgen_codegen"
version = "0.1.0"
description = "This tool aims to simplify glue code generation for Deno FFI libraries"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
Inflector = "0.11.4"
indexmap = "1.8.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
