[package]
name = "deno_bindgen"
version = "0.5.1"
description = "This tool aims to simplify glue code generation for Deno FFI libraries written in Rust."
documentation = "https://docs.rs/deno_bindgen"
homepage = "https://github.com/denoland/deno_bindgen"
repository = "https://github.com/denoland/deno_bindgen"
keywords = ["deno", "ffi", "bindgen", "bindings", "macro"]
categories = ["development-tools::ffi", "development-tools"]
readme = "../README.md"
license = "MIT"
edition = "2018"

[lib]
path = "./lib.rs"

[dependencies]
deno_bindgen_macro = { path = "../deno_bindgen_macro", version = "0.5.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
