[package]
name = "deno_bindgen"
version = "0.9.0-alpha"
description = "Write high-level Deno FFI libraries in Rust."
documentation = "https://docs.rs/deno_bindgen"
homepage = "https://github.com/denoland/deno_bindgen"
repository = "https://github.com/denoland/deno_bindgen"
keywords = ["deno", "ffi", "bindgen", "bindings", "macro"]
categories = ["development-tools::ffi", "development-tools"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
deno_bindgen_macro = { path = "../deno_bindgen_macro", version = "0.9.0-alpha" }
deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linkme = "0.3"

[dev-dependencies]
trybuild = "1.0.85"