[package]
name = "deno_bindgen_cli"
version = "0.1.0"
description = "This tool aims to simplify glue code generation for Deno FFI libraries written in Rust."
documentation = "https://docs.rs/deno_bindgen"
homepage = "https://github.com/denoland/deno_bindgen"
repository = "https://github.com/denoland/deno_bindgen"
keywords = ["deno", "ffi", "bindgen", "bindings", "macro"]
categories = ["development-tools::ffi", "development-tools"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "deno_bindgen"
path = "./main.rs"

[dependencies]
structopt = "0.3.26"
deno_bindgen_ir = { path = "../deno_bindgen_ir", version = "0.1.0" }
dlopen2 = "0.6.1"
cargo_metadata = "0.18.1"