[package]
name = "deno_bindgen_macro"
version = "0.5.1"
description = "This tool aims to simplify glue code generation for Deno FFI libraries written in Rust."
documentation = "https://docs.rs/deno_bindgen_macro"
homepage = "https://github.com/denoland/deno_bindgen"
repository = "https://github.com/denoland/deno_bindgen"
keywords = ["deno", "ffi", "bindgen", "bindings", "macro"]
categories = ["development-tools::ffi", "development-tools"]
readme = "../README.md"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
Inflector = "0.11.4"
